@@ -15,7 +15,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/bgosu/api/knto")
@@ -33,7 +32,7 @@ public class KntoController {
     public ResponseEntity<List<KorServiceInfo>> getRestaurantsNearby(@RequestParam("mapx") double mapx, @RequestParam("mapy") double mapy,
                                                                      @RequestParam("tag1") String tag1, @RequestParam("tag2") String tag2,
                                                                      @RequestParam("characterid") int characterid) {
-        int userid = 0;
+        int userid;
         Optional<CharacterInfo> characterInfo = characterInfoRepository.findByCharacterid(characterid);
         if(characterInfo.isPresent()){
             CharacterInfo ch = characterInfo.get();
@@ -50,13 +49,40 @@ public class KntoController {
             tag4 = u_info.getR_tag4();
             tag5 = u_info.getR_tag5();
         } else {
-            // 해당 answer_id에 대한 데이터가 없을 경우 적절한 응답 반환
+            // 해당 user table에 userid에 대한 데이터가 없을 경우 적절한 응답 반환
             return ResponseEntity.notFound().build();
         }
         List<KorServiceInfo> restaurants = korserviceInfoRepository.findRestaurantsNearby(mapx, mapy); // 레포지토리에서 가져오는 로직
         // 필터링 로직
-        // 정렬한거 프론트 쪽에서 뽑아내는거 가능하다고 한 것 같은데 확인 필요.
         Set<KorServiceInfo> filteredResultsSet = new LinkedHashSet<>(); //순서 정렬
+        if(tag5.equals("3")){
+            filteredResultsSet.addAll(restaurants.stream() //tag5 제외 => tag5 값은 상관 없음(3)을 받았으니
+                    .filter(info ->
+                            info.getTag1().contains(tag1) &&
+                                    info.getTag2().contains(tag2) &&
+                                    info.getTag3().contains(tag3) &&
+                                    info.getTag4().contains(tag4)
+                    )
+                    .toList());
+
+            filteredResultsSet.addAll(restaurants.stream() //tag5, tag4 제외
+                    .filter(info ->
+                            info.getTag1().contains(tag1) &&
+                                    info.getTag2().contains(tag2) &&
+                                    info.getTag3().contains(tag3)
+                    )
+                    .toList());
+
+            filteredResultsSet.addAll(restaurants.stream() //tag5, tag4, tag3 제외
+                    .filter(info ->
+                            info.getTag1().contains(tag1) &&
+                                    info.getTag2().contains(tag2)
+                    )
+                    .toList());
+            List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
+
+            return new ResponseEntity<>(filteredResults, HttpStatus.OK);
+        }
 
         filteredResultsSet.addAll(restaurants.stream() //모두 일치
                 .filter(info ->
@@ -66,8 +92,7 @@ public class KntoController {
                                 info.getTag4().contains(tag4) &&
                                 info.getTag5().contains(tag5)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + (long) filteredResultsSet.size());
+                .toList());
 
         filteredResultsSet.addAll(restaurants.stream() //tag5 제외
                 .filter(info ->
@@ -76,8 +101,7 @@ public class KntoController {
                                 info.getTag3().contains(tag3) &&
                                 info.getTag4().contains(tag4)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + (long) filteredResultsSet.size());
+                .toList());
 
         filteredResultsSet.addAll(restaurants.stream() //tag5, tag4 제외
                 .filter(info ->
@@ -85,33 +109,25 @@ public class KntoController {
                                 info.getTag2().contains(tag2) &&
                                 info.getTag3().contains(tag3)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + (long) filteredResultsSet.size());
+                .toList());
 
         filteredResultsSet.addAll(restaurants.stream() //tag5, tag4, tag3 제외
                 .filter(info ->
                         info.getTag1().contains(tag1) &&
                                 info.getTag2().contains(tag2)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + (long) filteredResultsSet.size());
+                .toList());
+//tag1, tag2는 취향 x, 분류기 때문에 필터링 안꺼지게 할거임.
 
-        filteredResultsSet.addAll(restaurants.stream() //tag5, tag4, tag3, tag2 제외
-                .filter(info ->
-                        info.getTag1().contains(tag1)
-                )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + (long) filteredResultsSet.size());
 
         List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
-
 
         return new ResponseEntity<>(filteredResults, HttpStatus.OK);
     }
     @GetMapping("/tour") //구현 완료
     public ResponseEntity<List<KorServiceInfo>> getTouristSpotsNearby(@RequestParam("mapx") double mapx, @RequestParam("mapy") double mapy,
                                                                       @RequestParam("characterid") int characterid) {
-        int userid = 0;
+        int userid;
         Optional<CharacterInfo> characterInfo = characterInfoRepository.findByCharacterid(characterid);
         if(characterInfo.isPresent()){
             CharacterInfo ch = characterInfo.get();
@@ -137,39 +153,60 @@ public class KntoController {
 
         Set<KorServiceInfo> filteredResultsSet = new LinkedHashSet<>(); //순서 정렬
 
+        if (tag1.equals("3")){ //tag1 값이 3인 경우 tag1을 필터에서 제외 => tag1 값은 모두 출력됨.
+            filteredResultsSet.addAll(touristSpots.stream() //모두 일치
+                    .filter(info ->
+                                    info.getTag2().contains(tag2) &&
+                                    info.getTag3().contains(tag3) &&
+                                    info.getTag4().contains(tag4)
+                    ).toList());
+
+
+            filteredResultsSet.addAll(touristSpots.stream() //tag4 제외
+                    .filter(info ->
+                                    info.getTag2().contains(tag2) &&
+                                    info.getTag3().contains(tag3)
+                    ).toList());
+
+            filteredResultsSet.addAll(touristSpots.stream() //tag4, tag3 제외
+                    .filter(info ->
+                                    info.getTag2().contains(tag2)
+                    ).toList());
+            List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
+
+            return new ResponseEntity<>(filteredResults, HttpStatus.OK);
+        }
+
         filteredResultsSet.addAll(touristSpots.stream() //모두 일치
                 .filter(info ->
                         info.getTag1().contains(tag1) &&
                                 info.getTag2().contains(tag2) &&
                                 info.getTag3().contains(tag3) &&
                                 info.getTag4().contains(tag4)
-                )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                ).toList());
+
+//        System.out.println("count = " + (long) filteredResultsSet.size());
 
         filteredResultsSet.addAll(touristSpots.stream() //tag4 제외
                 .filter(info ->
                         info.getTag1().contains(tag1) &&
                                 info.getTag2().contains(tag2) &&
                                 info.getTag3().contains(tag3)
-                )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                ).toList());
+//        System.out.println("count = " + (long) filteredResultsSet.size());
 
         filteredResultsSet.addAll(touristSpots.stream() //tag4, tag3 제외
                 .filter(info ->
                         info.getTag1().contains(tag1) &&
                                 info.getTag2().contains(tag2)
-                )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                ).toList());
+//        System.out.println("count = " + (long) filteredResultsSet.size());
 
         filteredResultsSet.addAll(touristSpots.stream() //tag4, tag3, tag2 제외
                 .filter(info ->
                         info.getTag1().contains(tag1)
-                )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                ).toList());
+//        System.out.println("count = " + (long) filteredResultsSet.size());
 
         List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
 
@@ -178,7 +215,7 @@ public class KntoController {
     @GetMapping("/cultural") //구현 완료
     public ResponseEntity<List<KorServiceInfo>> getCulturalPlacesNearby(@RequestParam("mapx") double mapx, @RequestParam("mapy") double mapy,
                                                                         @RequestParam("characterid") int characterid) {
-        int userid = 0;
+        int userid;
         Optional<CharacterInfo> characterInfo = characterInfoRepository.findByCharacterid(characterid);
         if(characterInfo.isPresent()){
             CharacterInfo ch = characterInfo.get();
@@ -212,8 +249,8 @@ public class KntoController {
                                 info.getTag3().contains(tag3) &&
                                 info.getTag4().contains(tag4)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                .toList());
+//        System.out.println("count = " + filteredResultsSet.stream().count());
 
         filteredResultsSet.addAll(culturalPlaces.stream() //tag4 제외
                 .filter(info ->
@@ -221,23 +258,23 @@ public class KntoController {
                                 info.getTag2().contains(tag2) &&
                                 info.getTag3().contains(tag3)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                .toList());
+//        System.out.println("count = " + filteredResultsSet.stream().count());
 
         filteredResultsSet.addAll(culturalPlaces.stream() //tag4, tag3 제외
                 .filter(info ->
                         info.getTag1().contains(tag1) &&
                                 info.getTag2().contains(tag2)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                .toList());
+//        System.out.println("count = " + filteredResultsSet.stream().count());
 
         filteredResultsSet.addAll(culturalPlaces.stream() //tag4, tag3, tag2 제외
                 .filter(info ->
                         info.getTag1().contains(tag1)
                 )
-                .collect(Collectors.toList()));
-        System.out.println("count = " + filteredResultsSet.stream().count());
+                .toList());
+//        System.out.println("count = " + filteredResultsSet.stream().count());
 
         List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
         return new ResponseEntity<>(filteredResults, HttpStatus.OK);
@@ -245,7 +282,7 @@ public class KntoController {
     @GetMapping("/shopping") //구현 완료
     public ResponseEntity<List<KorServiceInfo>> getShoppingPlacesNearby(@RequestParam("mapx") double mapx, @RequestParam("mapy") double mapy,
                                                                         @RequestParam("characterid") int characterid) {
-        int userid = 0;
+        int userid;
         Optional<CharacterInfo> characterInfo = characterInfoRepository.findByCharacterid(characterid);
         if(characterInfo.isPresent()){
             CharacterInfo ch = characterInfo.get();
@@ -263,31 +300,31 @@ public class KntoController {
             UserInfo answer = userInfo.get();
             tag1 = answer.getS_tag1();
             switch (tag1) {
-                case "1":  //명품
+                case "1" -> {  //명품
                     mapping_count = 1;
                     tag_s[0] = "1"; //백화점
-                    break;
-                case "2":  //기념품
+                }
+                case "2" -> {  //기념품
                     mapping_count = 2;
                     tag_s[0] = "2"; //전통시장
                     tag_s[1] = "6"; //잡화
-                    break;
-                case "3":  //화장품
+                }
+                case "3" -> {  //화장품
                     mapping_count = 2;
                     tag_s[0] = "1"; //백화점
                     tag_s[1] = "5"; //화장품
-                    break;
-                case "4":  //잡화
+                }
+                case "4" -> {  //잡화
                     mapping_count = 1;
                     tag_s[0] = "6"; //잡화
-                    break;
-                case "5":  //의류
+                }
+                case "5" -> {  //의류
                     mapping_count = 4;
                     tag_s[0] = "1"; //백화점
                     tag_s[1] = "2"; //전통시장
                     tag_s[2] = "3"; //아울렛
                     tag_s[3] = "4"; //지하상가
-                    break;
+                }
             }
         } else {
             // 해당 answer_id에 대한 데이터가 없을 경우 적절한 응답 반환
@@ -303,7 +340,7 @@ public class KntoController {
                             info.getTag1().contains(tag_a)
                     )
                     .toList());
-            System.out.println("count = " + (long) filteredResultsSet.size());
+//            System.out.println("count = " + (long) filteredResultsSet.size());
         }
         List<KorServiceInfo> filteredResults = new ArrayList<>(filteredResultsSet);
 
@@ -316,14 +353,12 @@ public class KntoController {
 
         List<KorServiceInfo> enjoyPlaces = korserviceInfoRepository.findEnjoyPlacesNearby(mapx, mapy);
 
-        List<KorServiceInfo> enjoyPlaces2 = new ArrayList<>();
-
-        enjoyPlaces2.addAll(enjoyPlaces.stream() //모두 일치
+        List<KorServiceInfo> enjoyPlaces2 = new ArrayList<>(enjoyPlaces.stream() //모두 일치
                 .filter(info ->
                         info.getTag1().contains(tag1)
                 )
                 .toList());
-        System.out.println("count = " + (long) enjoyPlaces2.size());
+//        System.out.println("count = " + (long) enjoyPlaces2.size());
 
         return new ResponseEntity<>(enjoyPlaces2, HttpStatus.OK);
     }
